--- a/css/style.css
+++ b/css/style.css
@@ -8953,11 +8953,11 @@ body.menu-show {
 
 a {
   transition: 0.3s all ease;
-  color: #20b7bf;
+  color: #0E4A84;
 }
 a:hover, a:focus {
   text-decoration: none;
-  color: #20b7bf;
+  color: #0E4A84;
   outline: none !important;
 }
 
@@ -8969,7 +8969,7 @@ h1, h2, h3, h4, h5,
 }
 
 .text-primary {
-  color: #20b7bf !important;
+  color: #0E4A84 !important;
 }
 
 .ftco-navbar-light {
@@ -9042,7 +9042,7 @@ h1, h2, h3, h4, h5,
   height: 2px;
   bottom: 0;
   left: 0;
-  background: #20b7bf;
+  background: #0E4A84;
   visibility: visible;
   -webkit-transform: scaleX(0);
   -moz-transform: scaleX(0);
@@ -9074,12 +9074,12 @@ h1, h2, h3, h4, h5,
 }
 .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
   color: #fff;
-  border: 1px solid #20b7bf;
+  border: 1px solid #0E4A84;
   padding-top: 0.7rem;
   padding-bottom: 0.7rem;
   padding-left: 18px;
   padding-right: 18px;
-  background: #20b7bf;
+  background: #0E4A84;
   margin-top: 0;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -9091,8 +9091,8 @@ h1, h2, h3, h4, h5,
   color: #fff;
 }
 .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-  background: #20b7bf;
-  border: 1px solid #20b7bf;
+  background: #0E4A84;
+  border: 1px solid #0E4A84;
 }
 .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored a {
   border: 1px solid #a0f669;
@@ -9101,7 +9101,7 @@ h1, h2, h3, h4, h5,
 .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active {
   background: transparent;
   background: none;
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active span:before {
   visibility: visible;
@@ -9110,7 +9110,7 @@ h1, h2, h3, h4, h5,
 }
 @media (max-width: 991.98px) {
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #20b7bf;
+    color: #0E4A84;
   }
 }
 .ftco-navbar-light .navbar-toggler {
@@ -9124,7 +9124,7 @@ h1, h2, h3, h4, h5,
 }
 .ftco-navbar-light .navbar-toggler:hover, .ftco-navbar-light .navbar-toggler:focus {
   text-decoration: none;
-  color: #20b7bf;
+  color: #0E4A84;
   outline: none !important;
 }
 .ftco-navbar-light.scrolled {
@@ -9148,11 +9148,11 @@ h1, h2, h3, h4, h5,
   }
 }
 .ftco-navbar-light.scrolled .nav-item.active > a {
-  color: #20b7bf !important;
+  color: #0E4A84 !important;
 }
 .ftco-navbar-light.scrolled .nav-item.cta > a {
   color: #fff !important;
-  background: #20b7bf;
+  background: #0E4A84;
   border: none !important;
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
@@ -9169,7 +9169,7 @@ h1, h2, h3, h4, h5,
   color: #fff !important;
 }
 .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-  border-color: #20b7bf;
+  border-color: #0E4A84;
 }
 @media (max-width: 991.98px) {
   .ftco-navbar-light.scrolled .navbar-nav {
@@ -9193,7 +9193,7 @@ h1, h2, h3, h4, h5,
   color: #000000 !important;
 }
 .ftco-navbar-light.scrolled .nav-link.active {
-  color: #20b7bf !important;
+  color: #0E4A84 !important;
 }
 .ftco-navbar-light.scrolled.awake {
   margin-top: 0px;
@@ -9222,7 +9222,7 @@ h1, h2, h3, h4, h5,
   width: 40px;
   height: 40px;
   content: "";
-  background: #20b7bf;
+  background: #0E4A84;
   z-index: -1;
   transform: translateY(-50%);
   -webkit-border-radius: 50%;
@@ -9250,7 +9250,7 @@ h1, h2, h3, h4, h5,
   content: "";
   opacity: 0.1;
   width: 50%;
-  background: #20b7bf;
+  background: #0E4A84;
 }
 .hero-wrap .text {
   width: 100%;
@@ -9260,7 +9260,7 @@ h1, h2, h3, h4, h5,
   text-transform: uppercase;
   font-size: 16px;
   font-weight: 800;
-  color: #20b7bf;
+  color: #0E4A84;
   letter-spacing: 4px;
 }
 .slider-text h1 {
@@ -9276,7 +9276,7 @@ h1, h2, h3, h4, h5,
   font-weight: 800;
 }
 .slider-text h2 span {
-  color: #20b7bf;
+  color: #0E4A84;
   text-decoration: underline;
 }
 .slider-text p {
@@ -9305,13 +9305,13 @@ h1, h2, h3, h4, h5,
   color: rgba(0, 0, 0, 0.8);
 }
 .slider-text .breadcrumbs span a {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .slider-text .breadcrumbs span a:hover, .slider-text .breadcrumbs span a:focus {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .slider-text .breadcrumbs span a:hover i, .slider-text .breadcrumbs span a:focus i {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .slider-text .bread {
   font-weight: 700;
@@ -9362,7 +9362,7 @@ h1, h2, h3, h4, h5,
   -webkit-animation: 1.6s ease infinite wheel-up-down;
   -moz-animation: 1.6s ease infinite wheel-up-down;
   animation: 1.6s ease infinite wheel-up-down;
-  color: #20b7bf;
+  color: #0E4A84;
   font-size: 30px;
 }
 
@@ -9439,7 +9439,7 @@ h1, h2, h3, h4, h5,
 }
 
 .bg-primary {
-  background: #20b7bf;
+  background: #0E4A84;
 }
 
 .btn {
@@ -9460,23 +9460,23 @@ h1, h2, h3, h4, h5,
   outline: none;
 }
 .btn.btn-primary {
-  background: #20b7bf;
-  border: 1px solid #20b7bf !important;
+  background: #0E4A84;
+  border: 1px solid #0E4A84 !important;
   color: #fff !important;
 }
 .btn.btn-primary:hover {
-  border: 1px solid #20b7bf !important;
-  background: #20b7bf !important;
+  border: 1px solid #0E4A84 !important;
+  background: #0E4A84 !important;
   color: #000000 !important;
 }
 .btn.btn-primary.btn-outline-primary {
-  border: 2px solid #20b7bf !important;
+  border: 2px solid #0E4A84 !important;
   background: transparent !important;
-  color: #20b7bf !important;
+  color: #0E4A84 !important;
 }
 .btn.btn-primary.btn-outline-primary:hover {
   border: 2px solid transparent !important;
-  background: #20b7bf !important;
+  background: #0E4A84 !important;
   color: #fff !important;
 }
 .btn.btn-secondary {
@@ -9516,7 +9516,7 @@ h1, h2, h3, h4, h5,
 }
 .btn.btn-white.btn-outline-white:hover {
   border: 1px solid transparent;
-  background: #20b7bf;
+  background: #0E4A84;
   color: #fff;
 }
 
@@ -9558,7 +9558,7 @@ h1, h2, h3, h4, h5,
 }
 .ftco-about .counter-wrap .text p span.number {
   font-weight: 600;
-  color: #20b7bf;
+  color: #0E4A84;
 }
 
 #navi {
@@ -9580,7 +9580,7 @@ h1, h2, h3, h4, h5,
   color: #000000;
 }
 #navi li a.current {
-  color: #20b7bf;
+  color: #0E4A84;
   margin-left: 20px;
   position: relative;
 }
@@ -9592,7 +9592,7 @@ h1, h2, h3, h4, h5,
   height: 2px;
   content: "";
   transform: translateY(-50%);
-  background: #20b7bf;
+  background: #0E4A84;
 }
 
 .page {
@@ -9606,7 +9606,7 @@ h1, h2, h3, h4, h5,
   font-weight: 800;
   font-size: 30px;
   margin-bottom: 30px;
-  color: #20b7bf;
+  color: #0E4A84;
 }
 
 .resume-wrap {
@@ -9618,7 +9618,7 @@ h1, h2, h3, h4, h5,
 .resume-wrap .icon {
   width: 50px;
   height: 50px;
-  background: #20b7bf;
+  background: #0E4A84;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -9635,7 +9635,7 @@ h1, h2, h3, h4, h5,
   font-weight: 700;
   font-size: 16px;
   color: rgba(0, 0, 0, 0.6);
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .resume-wrap h2 {
   font-size: 24px;
@@ -9674,7 +9674,7 @@ h1, h2, h3, h4, h5,
 .services-1 .icon i {
   font-size: 60px;
   line-height: 1;
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .services-1 .desc h3 {
   line-height: 1.3;
@@ -9693,7 +9693,7 @@ h1, h2, h3, h4, h5,
   content: "";
   width: 30px;
   height: 1px;
-  background: #20b7bf;
+  background: #0E4A84;
   margin: 0 auto;
 }
 .services-1 .desc h3 a {
@@ -9709,13 +9709,13 @@ h1, h2, h3, h4, h5,
   text-transform: uppercase;
   font-size: 12px;
   margin-bottom: 10px;
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .services-1 .desc p {
   color: rgba(0, 0, 0, 0.7);
 }
 .services-1:hover {
-  background: #20b7bf;
+  background: #0E4A84;
 }
 .services-1:hover .icon i {
   color: #fff;
@@ -9745,7 +9745,7 @@ h1, h2, h3, h4, h5,
 }
 
 .progress-bar {
-  background: #20b7bf;
+  background: #0E4A84;
   box-shadow: none;
   font-size: 12px;
   line-height: 1.2;
@@ -9765,7 +9765,7 @@ h1, h2, h3, h4, h5,
   width: 34px;
   height: 34px;
   content: "";
-  background: #20b7bf;
+  background: #0E4A84;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   -ms-border-radius: 2px;
@@ -9843,7 +9843,7 @@ h1, h2, h3, h4, h5,
 }
 
 .ftco-hireme {
-  background: #20b7bf;
+  background: #0E4A84;
   z-index: 0;
   position: relative;
 }
@@ -9854,7 +9854,7 @@ h1, h2, h3, h4, h5,
   right: 0;
   bottom: 0;
   content: "";
-  background: #20b7bf;
+  background: #0E4A84;
   opacity: 0.7;
 }
 .ftco-hireme h2 {
@@ -9916,7 +9916,7 @@ h1, h2, h3, h4, h5,
   bottom: 0;
   content: "";
   opacity: 0;
-  background: #20b7bf;
+  background: #0E4A84;
   z-index: -1;
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
@@ -10022,7 +10022,7 @@ textarea.form-control {
 }
 
 .bg-primary {
-  background: #20b7bf !important;
+  background: #0E4A84 !important;
 }
 
 .about-author {
@@ -10137,14 +10137,14 @@ textarea.form-control {
   margin: 0 10px 10px 0;
 }
 .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 
 .media .ftco-icon {
   width: 100px;
 }
 .media .ftco-icon span {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 
 #map {
@@ -10283,7 +10283,7 @@ textarea.form-control {
 .ftco-counter .text strong.number {
   font-weight: 700;
   font-size: 30px;
-  color: #20b7bf;
+  color: #0E4A84;
   display: block;
 }
 .ftco-counter .text span {
@@ -10300,7 +10300,7 @@ textarea.form-control {
   display: block;
   font-size: 72px;
   font-weight: bold;
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .ftco-counter .ftco-label {
   font-size: 12px;
@@ -10345,7 +10345,7 @@ textarea.form-control {
   color: #000000;
 }
 .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .blog-entry .meta {
   display: inline-block;
@@ -10355,13 +10355,13 @@ textarea.form-control {
   font-weight: 600;
 }
 .blog-entry .meta span {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .blog-entry .meta a {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .blog-entry .meta a:hover {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 
 .block-23 ul {
@@ -10437,7 +10437,7 @@ textarea.form-control {
 .contact-section .box .icon {
   width: 100px;
   height: 100px;
-  background: #20b7bf;
+  background: #0E4A84;
   margin: 0 auto;
   margin-bottom: 10px;
   -webkit-border-radius: 50%;
@@ -10467,7 +10467,7 @@ textarea.form-control {
   }
 }
 .contact-section .contact-info p a {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .contact-section .contact-form {
   width: 100%;
@@ -10504,7 +10504,7 @@ textarea.form-control {
   color: #000000;
 }
 .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .block-21 .text .meta > div {
   display: inline-block;
@@ -10592,7 +10592,7 @@ textarea.form-control {
   font-size: 13px;
   letter-spacing: 0.1em;
   color: rgba(255, 255, 255, 0.3);
-  color: #20b7bf;
+  color: #0E4A84;
   font-weight: 600;
   margin-bottom: 20px;
 }
@@ -10665,10 +10665,10 @@ textarea.form-control {
   position: absolute;
   right: 0;
   top: 0;
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .categories li a:hover, .categories li a:focus, .sidelink li a:hover, .sidelink li a:focus {
-  color: #20b7bf;
+  color: #0E4A84;
 }
 .categories li.active a, .sidelink li.active a {
   color: #000000;
