--- a/css/style.css
+++ b/css/style.css
@@ -10745,4 +10745,15 @@ textarea.form-control {
   }
 }
 
+#ftco-navbar .dropdown-menu .dropdown-item {
+  color: #000;
+  transition: color 0.2s ease, background-color 0.2s ease;
+}
+
+#ftco-navbar .dropdown-menu .dropdown-item:hover,
+#ftco-navbar .dropdown-menu .dropdown-item:focus {
+  color: #0E4A84;
+  background-color: transparent;
+}
+
 /*# sourceMappingURL=style.css.map */
