--- a/css/style.css
+++ b/css/style.css
@@ -8953,11 +8953,11 @@ body.menu-show {
 
 a {
   transition: 0.3s all ease;
-  color: #0E4A84;
+  color: #fff;
 }
 a:hover, a:focus {
   text-decoration: none;
-  color: #0E4A84;
+  color: #fff;
   outline: none !important;
 }
 
@@ -9101,7 +9101,7 @@ h1, h2, h3, h4, h5,
 .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active {
   background: transparent;
   background: none;
-  color: #0E4A84;
+  color: #fff;
 }
 .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active span:before {
   visibility: visible;
@@ -9110,7 +9110,7 @@ h1, h2, h3, h4, h5,
 }
 @media (max-width: 991.98px) {
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #0E4A84;
+    color: #fff;
   }
 }
 .ftco-navbar-light .navbar-toggler {
@@ -9124,7 +9124,7 @@ h1, h2, h3, h4, h5,
 }
 .ftco-navbar-light .navbar-toggler:hover, .ftco-navbar-light .navbar-toggler:focus {
   text-decoration: none;
-  color: #0E4A84;
+  color: #fff;
   outline: none !important;
 }
 .ftco-navbar-light.scrolled {
@@ -9260,7 +9260,7 @@ h1, h2, h3, h4, h5,
   text-transform: uppercase;
   font-size: 16px;
   font-weight: 800;
-  color: #0E4A84;
+  color: #fff;
   letter-spacing: 4px;
 }
 .slider-text h1 {
@@ -9276,7 +9276,7 @@ h1, h2, h3, h4, h5,
   font-weight: 800;
 }
 .slider-text h2 span {
-  color: #0E4A84;
+  color: #fff;
   text-decoration: underline;
 }
 .slider-text p {
@@ -9305,13 +9305,13 @@ h1, h2, h3, h4, h5,
   color: rgba(0, 0, 0, 0.8);
 }
 .slider-text .breadcrumbs span a {
-  color: #0E4A84;
+  color: #fff;
 }
 .slider-text .breadcrumbs span a:hover, .slider-text .breadcrumbs span a:focus {
-  color: #0E4A84;
+  color: #fff;
 }
 .slider-text .breadcrumbs span a:hover i, .slider-text .breadcrumbs span a:focus i {
-  color: #0E4A84;
+  color: #fff;
 }
 .slider-text .bread {
   font-weight: 700;
@@ -9323,13 +9323,13 @@ h1, h2, h3, h4, h5,
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 120px;
+  bottom: 80px;
   z-index: 2;
 }
 
 .mouse-icon {
-  width: 70px;
-  height: 70px;
+  width: 52px;
+  height: 52px;
   border: 1px solid transparent;
   cursor: pointer;
   position: relative;
@@ -9344,16 +9344,16 @@ h1, h2, h3, h4, h5,
   right: 0;
   bottom: 0;
   content: "";
-  background: rgb(159.011793722, 234.8977578475, 238.918206278);
+  background: #0E4A84;
   z-index: -1;
   transform: rotate(45deg);
 }
 
 .mouse-wheel {
-  height: 70px;
+  height: 52px;
   margin: 2px auto 0;
   display: block;
-  width: 30px;
+  width: 22px;
   background: transparent;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -9362,46 +9362,46 @@ h1, h2, h3, h4, h5,
   -webkit-animation: 1.6s ease infinite wheel-up-down;
   -moz-animation: 1.6s ease infinite wheel-up-down;
   animation: 1.6s ease infinite wheel-up-down;
-  color: #0E4A84;
-  font-size: 30px;
+  color: #fff;
+  font-size: 36px;
 }
 
 @-webkit-keyframes wheel-up-down {
   100% {
-    margin-top: 25px;
+    margin-top: 12px;
     opacity: 1;
   }
   30% {
     opacity: 1;
   }
   0% {
-    margin-top: -10px;
+    margin-top: -6px;
     opacity: 0;
   }
 }
 @-moz-keyframes wheel-up-down {
   100% {
-    margin-top: 25px;
+    margin-top: 12px;
     opacity: 1;
   }
   30% {
     opacity: 1;
   }
   0% {
-    margin-top: -10px;
+    margin-top: -6px;
     opacity: 0;
   }
 }
 @keyframes wheel-up-down {
   100% {
-    margin-top: 25px;
+    margin-top: 12px;
     opacity: 1;
   }
   30% {
     opacity: 1;
   }
   0% {
-    margin-top: -10px;
+    margin-top: -6px;
     opacity: 0;
   }
 }
@@ -9558,7 +9558,7 @@ h1, h2, h3, h4, h5,
 }
 .ftco-about .counter-wrap .text p span.number {
   font-weight: 600;
-  color: #0E4A84;
+  color: #fff;
 }
 
 #navi {
@@ -9580,7 +9580,7 @@ h1, h2, h3, h4, h5,
   color: #000000;
 }
 #navi li a.current {
-  color: #0E4A84;
+  color: #fff;
   margin-left: 20px;
   position: relative;
 }
@@ -9606,7 +9606,7 @@ h1, h2, h3, h4, h5,
   font-weight: 800;
   font-size: 30px;
   margin-bottom: 30px;
-  color: #0E4A84;
+  color: #fff;
 }
 
 .resume-wrap {
@@ -9635,7 +9635,7 @@ h1, h2, h3, h4, h5,
   font-weight: 700;
   font-size: 16px;
   color: rgba(0, 0, 0, 0.6);
-  color: #0E4A84;
+  color: #fff;
 }
 .resume-wrap h2 {
   font-size: 24px;
@@ -9674,7 +9674,7 @@ h1, h2, h3, h4, h5,
 .services-1 .icon i {
   font-size: 60px;
   line-height: 1;
-  color: #0E4A84;
+  color: #fff;
 }
 .services-1 .desc h3 {
   line-height: 1.3;
@@ -9709,7 +9709,7 @@ h1, h2, h3, h4, h5,
   text-transform: uppercase;
   font-size: 12px;
   margin-bottom: 10px;
-  color: #0E4A84;
+  color: #fff;
 }
 .services-1 .desc p {
   color: rgba(0, 0, 0, 0.7);
@@ -10137,14 +10137,14 @@ textarea.form-control {
   margin: 0 10px 10px 0;
 }
 .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
-  color: #0E4A84;
+  color: #fff;
 }
 
 .media .ftco-icon {
   width: 100px;
 }
 .media .ftco-icon span {
-  color: #0E4A84;
+  color: #fff;
 }
 
 #map {
@@ -10283,7 +10283,7 @@ textarea.form-control {
 .ftco-counter .text strong.number {
   font-weight: 700;
   font-size: 30px;
-  color: #0E4A84;
+  color: #fff;
   display: block;
 }
 .ftco-counter .text span {
@@ -10300,7 +10300,7 @@ textarea.form-control {
   display: block;
   font-size: 72px;
   font-weight: bold;
-  color: #0E4A84;
+  color: #fff;
 }
 .ftco-counter .ftco-label {
   font-size: 12px;
@@ -10345,7 +10345,7 @@ textarea.form-control {
   color: #000000;
 }
 .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-  color: #0E4A84;
+  color: #fff;
 }
 .blog-entry .meta {
   display: inline-block;
@@ -10355,13 +10355,13 @@ textarea.form-control {
   font-weight: 600;
 }
 .blog-entry .meta span {
-  color: #0E4A84;
+  color: #fff;
 }
 .blog-entry .meta a {
-  color: #0E4A84;
+  color: #fff;
 }
 .blog-entry .meta a:hover {
-  color: #0E4A84;
+  color: #fff;
 }
 
 .block-23 ul {
@@ -10467,7 +10467,7 @@ textarea.form-control {
   }
 }
 .contact-section .contact-info p a {
-  color: #0E4A84;
+  color: #fff;
 }
 .contact-section .contact-form {
   width: 100%;
@@ -10504,7 +10504,7 @@ textarea.form-control {
   color: #000000;
 }
 .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-  color: #0E4A84;
+  color: #fff;
 }
 .block-21 .text .meta > div {
   display: inline-block;
@@ -10592,7 +10592,7 @@ textarea.form-control {
   font-size: 13px;
   letter-spacing: 0.1em;
   color: rgba(255, 255, 255, 0.3);
-  color: #0E4A84;
+  color: #fff;
   font-weight: 600;
   margin-bottom: 20px;
 }
@@ -10665,10 +10665,10 @@ textarea.form-control {
   position: absolute;
   right: 0;
   top: 0;
-  color: #0E4A84;
+  color: #fff;
 }
 .categories li a:hover, .categories li a:focus, .sidelink li a:hover, .sidelink li a:focus {
-  color: #0E4A84;
+  color: #fff;
 }
 .categories li.active a, .sidelink li.active a {
   color: #000000;
@@ -10752,7 +10752,7 @@ textarea.form-control {
 
 #ftco-navbar .dropdown-menu .dropdown-item:hover,
 #ftco-navbar .dropdown-menu .dropdown-item:focus {
-  color: #0E4A84;
+  color: #fff;
   background-color: transparent;
 }
 
