--- a/scss/style.scss
+++ b/scss/style.scss
@@ -481,7 +481,7 @@ h1, h2, h3, h4, h5,
   -webkit-animation: 1.6s ease infinite wheel-up-down;
  -moz-animation: 1.6s ease infinite wheel-up-down;
   animation: 1.6s ease infinite wheel-up-down;
-  color: #fff;
+  color: #0E4A84;
   font-size: 36px;
 }
 @-webkit-keyframes wheel-up-down {
