--- a/css/style.css
+++ b/css/style.css
@@ -9101,7 +9101,7 @@ h1, h2, h3, h4, h5,
 .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active {
   background: transparent;
   background: none;
-  color: #fff;
+  color: #0E4A84;
 }
 .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active span:before {
   visibility: visible;
@@ -9110,7 +9110,7 @@ h1, h2, h3, h4, h5,
 }
 @media (max-width: 991.98px) {
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #fff;
+    color: #0E4A84;
   }
 }
 .ftco-navbar-light .navbar-toggler {
@@ -9653,7 +9653,7 @@ h1, h2, h3, h4, h5,
   color: #000000;
 }
 #navi li a.current {
-  color: #fff;
+  color: #0E4A84;
   margin-left: 20px;
   position: relative;
 }
