--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
+  word-break: keep-all;
+  overflow-wrap: break-word;
 }
 
 [tabindex="-1"]:focus {
