--- a/css/style.css
+++ b/css/style.css
@@ -9450,7 +9450,8 @@ h1, h2, h3, h4, h5,
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 2px;
-  color: #bdbdbd;
+  color: #4a4a4a;
+  font-weight: 600;
   text-align: center;
 }
 
