--- a/css/style.css
+++ b/css/style.css
@@ -9189,13 +9189,14 @@ h1, h2, h3, h4, h5,
   right: 0;
   left: 0;
   top: 0;
-  margin-top: -130px;
-  background: #fff !important;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  margin-top: 0;
+  background: #030303 !important;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
   padding: 0 15px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
 }
 .ftco-navbar-light.scrolled .nav-item > .nav-link {
-  color: #000000 !important;
+  color: rgba(255, 255, 255, 0.82) !important;
 }
 @media (max-width: 991.98px) {
   .ftco-navbar-light.scrolled .nav-item > .nav-link {
@@ -9205,28 +9206,25 @@ h1, h2, h3, h4, h5,
   }
 }
 .ftco-navbar-light.scrolled .nav-item.active > a {
-  color: #0E4A84 !important;
+  color: #f6e8c7 !important;
 }
 .ftco-navbar-light.scrolled .nav-item.cta > a {
-  color: #fff !important;
-  background: #0E4A84;
-  border: none !important;
-  padding-top: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
-  padding-left: 20px !important;
-  padding-right: 20px !important;
-  margin-top: 5px !important;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  border-radius: 5px;
+  color: #f6e8c7 !important;
+  background: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.65) !important;
+  padding-top: 0.4rem !important;
+  padding-bottom: 0.4rem !important;
+  padding-left: 18px !important;
+  padding-right: 18px !important;
+  margin-top: 0 !important;
+  border-radius: 999px;
 }
 .ftco-navbar-light.scrolled .nav-item.cta > a span {
   display: inline-block;
-  color: #fff !important;
+  color: inherit !important;
 }
 .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-  border-color: #0E4A84;
+  border-color: rgba(255, 255, 255, 0.65);
 }
 @media (max-width: 991.98px) {
   .ftco-navbar-light.scrolled .navbar-nav {
@@ -9239,18 +9237,18 @@ h1, h2, h3, h4, h5,
 }
 .ftco-navbar-light.scrolled .navbar-toggler {
   border: none;
-  color: rgba(0, 0, 0, 0.5) !important;
-  border-color: rgba(0, 0, 0, 0.5) !important;
+  color: rgba(255, 255, 255, 0.9) !important;
+  border-color: rgba(255, 255, 255, 0.9) !important;
   cursor: pointer;
   text-transform: uppercase;
   font-size: 16px;
   letter-spacing: 0.1em;
 }
 .ftco-navbar-light.scrolled .nav-link {
-  color: #000000 !important;
+  color: rgba(255, 255, 255, 0.82) !important;
 }
 .ftco-navbar-light.scrolled .nav-link.active {
-  color: #0E4A84 !important;
+  color: #f6e8c7 !important;
 }
 .ftco-navbar-light.scrolled.awake {
   margin-top: 0px;
@@ -9260,10 +9258,9 @@ h1, h2, h3, h4, h5,
   transition: 0.3s all ease-out;
 }
 .ftco-navbar-light.scrolled .navbar-brand {
-  color: #000000;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  font-size: 24px;
+  color: #f5f5f5;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .navbar-brand {
