--- a/css/style.css
+++ b/css/style.css
@@ -9049,6 +9049,8 @@ h1, h2, h3, h4, h5,
 
 .ftco-navbar-light .navbar-nav > .nav-item.nav-cta > .nav-link span {
   color: inherit;
+  width: 100%;
+  text-align: center;
 }
 
 .ftco-navbar-light .navbar-nav > .nav-item.nav-cta > .nav-link:hover,
@@ -9072,6 +9074,7 @@ h1, h2, h3, h4, h5,
     min-width: 110px;
     padding-left: 1rem;
     padding-right: 1rem;
+    width: 100%;
   }
 }
 .ftco-navbar-light .navbar-nav > .nav-item.nav-cta > .nav-link:hover span,
