--- a/css/style.css
+++ b/css/style.css
@@ -9049,8 +9049,12 @@ h1, h2, h3, h4, h5,
 
 .ftco-navbar-light .navbar-nav > .nav-item.nav-cta > .nav-link span {
   color: inherit;
-  width: 100%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
   text-align: center;
+  padding-bottom: 0;
 }
 
 .ftco-navbar-light .navbar-nav > .nav-item.nav-cta > .nav-link:hover,
@@ -9074,7 +9078,7 @@ h1, h2, h3, h4, h5,
     min-width: 110px;
     padding-left: 1rem;
     padding-right: 1rem;
-    width: 100%;
+    align-self: center;
   }
 }
 .ftco-navbar-light .navbar-nav > .nav-item.nav-cta > .nav-link:hover span,
