--- a/css/style.css
+++ b/css/style.css
@@ -9083,6 +9083,12 @@ h1, h2, h3, h4, h5,
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    min-height: 46px;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+  .ftco-navbar-light .navbar-nav > .nav-item.nav-cta > .nav-link span {
+    height: 100%;
   }
 }
 .ftco-navbar-light .navbar-nav > .nav-item.nav-cta > .nav-link:hover span,
