--- a/css/style.css
+++ b/css/style.css
@@ -9138,7 +9138,7 @@ h1, h2, h3, h4, h5,
   transform: scaleX(1);
 }
 @media (max-width: 991.98px) {
-  .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
+  .ftco-navbar-light .navbar-nav > .nav-item:not(.nav-cta) > .nav-link {
     padding-left: 0;
     padding-right: 0;
     padding-bottom: 1rem;
